--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -6,6 +6,10 @@
   .page {
     @apply bg-woodsmoke-50 p-2 size-full;
   }
+
+  .modal-btn {
+    @apply flex-1 duration-300 ease-in-out;
+  }
 }
 
 .main-layout {
