--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -6,7 +6,9 @@
   .page {
     @apply bg-woodsmoke-50 p-2 size-full;
   }
-
+  .to-do-btn {
+    @apply flex items-center justify-center size-6 border border-woodsmoke-950 rounded-full text-2xl text-woodsmoke-950;
+  }
   .modal-btn {
     @apply flex-1 duration-300 ease-in-out;
   }
