--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -12,6 +12,9 @@
   .modal-btn {
     @apply flex-1 duration-300 ease-in-out;
   }
+  .priority-btn {
+    @apply size-8 rounded-lg opacity-0 font-bold animate-move-left-to-right text-woodsmoke-950;
+  }
 }
 
 .main-layout {
