fix(frontend): fixes Navbar height in To-Do Page

--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -65,7 +65,7 @@
       "nav main main"
       "nav main main";
     grid-template-columns: 224px repeat(2, 1fr);
-    grid-template-rows: 4rem repeat(2, 1fr);
+    grid-template-rows: 4rem repeat(2, calc(50vh - 2rem));
   }
   .main-layout:has(#nav.closed) {
     grid-template-columns: 32px repeat(2, 1fr);
