feat(frontend): adapts the Note Page to work in Mobile Devices

--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -40,11 +40,9 @@
 }
 
 .note-page-layout {
-  grid-template-areas:
-    "nt-main"
-    "nt-main";
+  grid-template-areas: "nt-main";
   grid-template-columns: 1fr;
-  grid-template-rows: 192px 1fr;
+  grid-template-rows: 1fr;
 }
 
 /** Main - Grid Area  */
