feat(frontend): create Note Options Tab and Button UI

--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -111,4 +111,7 @@
     grid-template-columns: 240px 1fr 240px;
     grid-template-rows: 1fr;
   }
+  .note-page-layout:has(#nt-options.closed) {
+    grid-template-columns: 240px 1fr 32px;
+  }
 }
