--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -43,6 +43,23 @@
   /*...*/
 }
 
+/*? Kanban Page */
+/*? Color Picker */
+.slider {
+  -webkit-appearance: none;
+  appearance: none;
+}
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  background: transparent;
+  cursor: pointer;
+  border: 4px solid white;
+  border-radius: 100%;
+}
+
 /** Layouts */
 
 .main-layout {
