--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -48,7 +48,11 @@
     @apply flex-1 duration-300 ease-in-out;
   }
 
-  /*...*/
+  /** Navbar */
+  .link-list {
+    @apply flex w-full
+      lg:flex-col lg:items-end lg:gap-y-2;
+  }
 }
 
 /*? Kanban Page */
